# triangle

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  235.js  235.js.map  293.js  293.js.LICENSE.txt  293.js.map  329.js  329.js.map  Cargo.toml  README.md  index.html  jest-playwright.config.js  jest.config.js  main.js.LICENSE.txt  package-lock.json  package.json  stylelint.config.js  tailwind.config.js  tsconfig.json  webpack.config.ts
.github/workflows/: ci.yaml
client/: global.css  index.html  index.ts  tsconfig.json
client/src/: Root.tsx  arrangements.ts  bindings.ts  broker.ts  camera.ts  machine.ts  main.ts  pause.worker.ts  scene.ts  setup.ts  types.ts
client/src/components/: Root.css  Root.tsx
engine/: lib.rs  nav.rs  util.rs
spec/: page.spec.ts  thing.spec.ts
