[package]
name = "triangle"
version = "0.1.0"
authors = ["Louis Quinnell <_@ziorobo.co>"]
edition = "2018"

[lib]
path = "./engine/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.65"
js-sys = "0.3.42"
nalgebra = { version = "0.21.1", default-features = false }

[dependencies.web-sys]
version = "0.3.40"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"
