[package]
name = "triangle"
version = "0.1.0"
authors = ["Louis Quinnell <_@ziorobo.co>"]
edition = "2018"

[lib]
path = "./engine/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.67"
js-sys = "0.3.44"
ultraviolet = "0.4.6"

[dependencies.web-sys]
version = "0.3.44"
features = ["console"]

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.6"

[package.metadata.wasm-pack.profile.dev.wasm-bindgen]
debug-js-glue = true
demangle-name-section = true
dwarf-debug-info = true
